--- a/README
+++ b/README
@@ -19,14 +19,9 @@ Students: Extracurricular activities, clubs, achievements, and student council.
 Gallery: Photos and videos of school events and facilities.
 Contact Us: Contact information and form, along with Google Maps integration.
 
-Contributing
-Contributions are welcome! Please fork the repository and create a pull request with your changes. Ensure that your code adheres to the project's coding standards and conventions.
-
-License
-This project is licensed under the MIT License. See the LICENSE file for details.
 
 Contact
-For any inquiries or feedback, please contact us at:
+For any inquiries, please contact us at:
 
 Email: omaanmallick11@gmail.com
 Phone: +91 6206452943
