--- a/README
+++ b/README
@@ -5,6 +5,7 @@ Technologies Used
 React.js: A JavaScript library for building user interfaces.
 Bootstrap: A popular CSS framework for responsive design.
 React Router: For navigation between pages.
+Tailwind CSS: For styling and responsive design 
 
 Usage
 Navigate through the various sections of the website to explore the content:
